--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,21 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Loto's Barber | Haircuts & Shaves </title>
-    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../scss/main.css">
     <link rel="shortcut icon" href="../images/Favicon.jpg" type="image/x-icon">
 </head>
 <body>
     <header class="encabezado">
+        <div>
+            <a href="../index.html"><img src="../images/lotoslogomejorado.png" alt="LOTO'S BARBER | Haircuts & Shaves" class="imagen"></a>
+        </div>    
         <nav class="Menu">
-            
-            <ul class="navegacion1">
+            <ul class="navegacion">
                 <li class="items item1"><a href="./la_pelu.html" class="pages"> LA PELU </a></li>
                 <li class="items item2"><a href="./servicios.html" class="pages"> SERVICIOS </a></li>                
-            </ul>
-
-            <a href="../index.html"><img src="../images/lotoslogomejorado.png" alt="LOTO'S BARBER | Haircuts & Shaves" class="imagen"></a>
-
-            <ul class="navegacion2">
                 <li class="items item3"><a href="./nosotros.html" class="pages"> NOSOTROS </a></li>
                 <li class="items item4"><a href="./contacto.html" class="pages"> CONTACTO </a></li>
             </ul>
@@ -27,32 +24,28 @@
     <main>
         <div> <h2 class="titulos_pages"> CONTACTO </h2> </div>
         <section class="redes_contacto">
-            <section class="whatsapp">
-                <section class="titulowpp">
+            <div class="whatsapp">
+                <div class="titulowpp">
                 <h3 class="escribinos"> Escribinos a nuestro Whatsapp y reservá tu turno </h3>
-                </section>
-                <section class="numerowpp"> 
+                </div>
+                <div class="numerowpp"> 
                     <img src="../images/wpp.png" alt="whatsapp" class="wpplogo">
                     <h4><a href="https://wa.link/pf9ugg" target="_blank" class="numero"> 11 62241690 </a> </h4>
                     <img src="../images/calendario.png" alt="calendario" class="calendario">
-                </section>
-            </section>
+                </div>
+            </div>
 
-            <section class="redes_sociales">
+            <div class="redes_sociales">
                 <h3 class="encontranos_ig"> TAMBIÉN ENCONTRANOS EN INSTAGRAM </h3>
-                <section class="inforedes">
+                <div class="inforedes">
                     <img src="../images/fondocelu.png" alt="Loto's redes" class="imgcelu">
-                    <section class="otras_redes">
-                        <section class="logosredes">
-                            <a href="https://www.instagram.com/lotosbarber/" target="_blank"><img src="../images/iglogo.png" alt="instagram" class="logos"></a>
-                            <h4 class="usuario"> @lotosbarber </h4>
-                        </section>
-                    </section>
-                </section>    
-            </section>
+                    <div class="logosredes">
+                        <a href="https://www.instagram.com/lotosbarber/" target="_blank"><img src="../images/iglogo.png" alt="instagram" class="logos"></a>
+                        <a href="https://www.instagram.com/lotosbarber/" target="_blank"><h4 class="usuario"> @lotosbarber </h4></a>
+                    </div> 
+                </div>    
+            </div>
         </section>
-
-
     </main>
 
     <footer>
