--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -5,21 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Loto's Barber | Haircuts & Shaves </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../scss/main.css">
     <link rel="shortcut icon" href="../images/Favicon.jpg" type="image/x-icon">
 </head>
 <body>
     <header class="encabezado">
+        <div>
+            <a href="../index.html"><img src="../images/lotoslogomejorado.png" alt="LOTO'S BARBER | Haircuts & Shaves" class="imagen"></a>
+        </div>    
         <nav class="Menu">
-            
-            <ul class="navegacion1">
+            <ul class="navegacion">
                 <li class="items item1"><a href="./la_pelu.html" class="pages"> LA PELU </a></li>
                 <li class="items item2"><a href="./servicios.html" class="pages"> SERVICIOS </a></li>                
-            </ul>
-
-            <a href="../index.html"><img src="../images/lotoslogomejorado.png" alt="LOTO'S BARBER | Haircuts & Shaves" class="imagen"></a>
-
-            <ul class="navegacion2">
                 <li class="items item3"><a href="./nosotros.html" class="pages"> NOSOTROS </a></li>
                 <li class="items item4"><a href="./contacto.html" class="pages"> CONTACTO </a></li>
             </ul>
@@ -27,38 +24,57 @@
     </header>
     <main>
         <div>
-            <h2 class="titulos_pages"> NOSOTROS</h2>
+            <h2 class="titulos_pages container"> NOSOTROS</h2>
         </div>
-        <div class="barberos container">
+        <section class="barberos container">
+            <div class="eloy container"> 
+                <h3 class="titulos_barberos"> ELOY </h3>
+                <div class="info_eloy">
+                    <p class="descripcion"> El primero de nosotros, y gracias a quien es posible que hoy seamos lo que somos, fue Eloy, nuestro papá. Fue peluquero desde 1980 y gracias a él nosotros tenemos esta pasión, y queremos continuar con el legado que nos dejó. <p>
+                    <div>
+                        <img src="../images/eloy.png" alt="Eloy" class="foto_eloy">
+                    </div>
+                </div>
+            </div>
 
-            <section class="barbero1">
-            <div class="imagen1">
-                <img src="../images/alejo.png" alt="barbero_1" class="barberos_fotos alejo_img">
+            <div class="hijos">
+                <h3 class="titulos_barberos"> LOS HIJOS DE ELOY: MORRO Y ALEJO </h3>
+                <div class="hijos_eloy">
+                <div class="barbero">
+                    <div class="imagen_barberos">
+                    <img src="../images/alejo.png" alt="barbero_1" class="barberos_fotos alejo_img">
+                    </div>
+                    <div class="info alejo">
+                    <h3 class="nombres"> ALEJO </h3>
+                    </div>
                 </div>
-                <div class="info alejo">
-                <h3 class="nombres"> ALEJO </h3>
+                <p class="descripcion desc_hijos"> En 2021, decidimos continuar con el legado que nos dejó nuestro papá y reabrimos la pelu, pero esta vez con el nombre de "Los hijos de Eloy", porque sentimos que sin Eloy la pelu hoy no sería ni la mitad de lo que es ni lo que representa para nosotros.</p>
+                <div class="barbero">
+                    <div class="imagen_barberos">
+                    <img src="../images/morro.png" alt="barbero_2" class="barberos_fotos elian_img">
+                    </div>
+                    <div class="info elian">
+                    <h3 class="nombres"> MORRO </h3>
+                    </div>
                 </div>
-            </section>
+                </div>
+            </div>
 
-            <section class="barbero2">
-                <div class="imagen2">
-                <img src="../images/morro.png" alt="barbero_2" class="barberos_fotos elian_img">
+            <div class="caja_ivan"> 
+                <h3 class="titulos_barberos"> IVAN, UNO MÁS DE NOSOTROS</h3>
+                <div class="info_ivan">
+                    <p class="descripcion"> Amigo nuestro desde hace años, a mediados de 2023 se sumó a nuestro equipo buscando crecer personalmente y aportando también al crecimiento de la pelu.</p>
+                    <div class="barbero">
+                        <div class="imagen_barberos">
+                        <img src="../images/ivan.png" alt="barbero_3" class="barberos_fotos ivan_img">
+                        </div>
+                        <div class="info ivan">
+                        <h3 class="nombres"> IVAN </h3>
+                        </div>
+                    </div>
                 </div>
-                <div class="info elian">
-                <h3 class="nombres"> MORRO </h3>
-                </div>
-            </section>
-
-            <section class="barbero3">
-                <div class="imagen3">
-                <img src="../images/ivan.png" alt="barbero_3" class="barberos_fotos ivan_img">
-                </div>
-                <div class="info ivan">
-                <h3 class="nombres"> IVAN </h3>
-                </div>
-            </section>
-
-        </div>
+            </div>
+        </section>
     </main>
 
     <footer>
