--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -5,21 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Loto's Barber | Haircuts & Shaves </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../scss/main.css">
     <link rel="shortcut icon" href="../images/Favicon.jpg" type="image/x-icon">
 </head>
 <body>
     <header class="encabezado">
+        <div>
+            <a href="../index.html"><img src="../images/lotoslogomejorado.png" alt="LOTO'S BARBER | Haircuts & Shaves" class="imagen"></a>
+        </div>    
         <nav class="Menu">
-            
-            <ul class="navegacion1">
+            <ul class="navegacion">
                 <li class="items item1"><a href="./la_pelu.html" class="pages"> LA PELU </a></li>
                 <li class="items item2"><a href="./servicios.html" class="pages"> SERVICIOS </a></li>                
-            </ul>
-
-            <a href="../index.html"><img src="../images/lotoslogomejorado.png" alt="LOTO'S BARBER | Haircuts & Shaves" class="imagen"></a>
-
-            <ul class="navegacion2">
                 <li class="items item3"><a href="./nosotros.html" class="pages"> NOSOTROS </a></li>
                 <li class="items item4"><a href="./contacto.html" class="pages"> CONTACTO </a></li>
             </ul>
@@ -32,16 +29,38 @@
         <div class="servicios row">
         <section class="cortes">
             <h3 class="títulos_servicios"> CORTES </h3>
-            <img src="../images/cortes.jpg" alt="cortes" class="servicios_img">
         </section>
         <section class="barba">
             <h3 class="títulos_servicios"> BARBA </h3>
-            <img src="../images/barba.jpg" alt="barba" class="servicios_img">
         </section>
         <section class="cejas">
             <h3 class="títulos_servicios"> CEJAS </h3>
-            <img src="../images/cejas.jpg" alt="cejas" class="servicios_img">
         </section>
+        <section class="diseños_cortes">
+            <p class="texto-diseños">Además, en cada corte podés elegir el diseño que más te guste</p>
+            <div id="carouselExample" class="carousel slide diseños">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="../images/diseño1.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="../images/diseño2.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="../images/diseño3.jpg" class="d-block w-100" alt="...">
+                  </div>
+                </div>
+                <button class="carousel-control-prev botones btn btn-light" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Anterior</span>
+                </button>
+                <button class="carousel-control-next botones btn btn-light" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Siguiente</span>
+                </button>
+            </div>
+        </section>
+
         </div>
     </main>
 
