Animaciones y SEO agregadas

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Loto's Barber | Haircuts & Shaves </title>
+    <title> Loto's Barber | Contacto </title>
+    <meta name="description" content="Contactate con nosotros a través de nuestras redes sociales, Whatsapp o Instagram">
+    <meta name="keywords" content="telefono, turno, instagram, whatsapp, contactanos, contacto, mensaje, seguinos, lotosbarber, corte de pelo, peluqueria, barberia, barberos, horarios, horario">
     <link rel="stylesheet" href="../scss/main.css">
     <link rel="shortcut icon" href="../images/Favicon.jpg" type="image/x-icon">
 </head>
