--- a/pages/la_pelu.html
+++ b/pages/la_pelu.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Loto's Barber | Haircuts & Shaves </title>
+    <title> Loto's Barber | La Pelu </title>
+    <meta name="description" content="Conocé el lugar donde se lleva a cabo este emprendimiento familiar">
+    <meta name="keywords" content="BARBERIA, LA PELU, CORTES, PELO, BARBA, CEJAS, NAVAJAS, DISEÑOS, PELUQUERO, PELUQUERIA, HOMBRE, HOMBRES, ESTÉTICA, CORTES DE PELO,">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../scss/main.css">
     <link rel="shortcut icon" href="../images/Favicon.jpg" type="image/x-icon">
