--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Loto's Barber | Haircuts & Shaves </title>
+    <title> Loto's Barber | Nosotros </title>
+    <meta name="description" content="Conocé quienes somos. Alejo, Morro e Ivan, los sucesores de Eloy">
+    <meta name="keywords" content="barberos, barbero, barbería, peluquero, Eloy, Ivan, Alejo, Morro, historia, peluqueria, familia, hijos, padre, amigo">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../scss/main.css">
     <link rel="shortcut icon" href="../images/Favicon.jpg" type="image/x-icon">
